--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/dlib)
 # include the plotcpp lib
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/plotcpp)
 
-add_executable( Source ${source_dir}/Source.cpp ${source_dir}/ImageProcessor.cpp )
+add_executable( Source ${source_dir}/Source.cpp ${source_dir}/ImageProcessor.cpp ${source_dir}/ClusterIdentification.cpp)
 target_link_libraries( Source "${TORCH_LIBRARIES}" )
 target_link_libraries( Source ${OpenCV_LIBS} )
 target_link_libraries( Source dlib::dlib )
